--- a/src/pages/project/[slug].astro
+++ b/src/pages/project/[slug].astro
@@ -45,8 +45,8 @@ const { slug } = Astro.params;
 ---
 
 <Layout title={title}>
-	<section class="flex flex-col text-md md:text-lg justify-start space-y-5">
-		<h1 class="text-3xl md:text-5xl  font-mono font-semibold">{title}</h1>
+	<section class="flex flex-col text-lg  justify-start space-y-5 px-3">
+		<h1 class="text-xl sm:text-2xl md:text-5xl  font-mono font-semibold">{title}</h1>
 		{
 			tags.map((tag: string) => (
 				<Badge className="w-32 text-sm md:text-md flex justify-start items-center gap-2">
@@ -56,7 +56,7 @@ const { slug } = Astro.params;
 			))
 		}
 
-		<div class="flex justify-start items-center gap-5">
+		<div class="flex flex-col md:flex-row justify-start items-start md:items-center  gap-5">
 			<a
 				class="text-muted-foreground flex justify-center items-center gap-2"
 				href={liveLink}
