--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -11,17 +11,16 @@ const projects: cardInterface[] = await useSanityClient().fetch(
 ---
 
 <Layout title="All Works">
-  <h1 class="text-6xl text-center text-card-foreground font-bold mb-10">All Works</h1>
+  <h1 class="text-4xl sm:text-5xl md:text-6xl text-center text-card-foreground font-bold mb-10 mx-1">All Works</h1>
 
-  <section class="grid grid-cols-2 space-y-3 md:grid-cols-4 place-items-center mt-6">
+  <section class="grid grid-cols-1 sm:grid-cols-2 space-y-3 md:grid-cols-4 place-items-center mt-6">
     {
       projects.map((project) => (
-        <div class="rounded-md border w-44 h-44 bg-card grid place-items-center">
+        <div class="rounded-md border w-64 sm:w-44 h-64 sm:h-44 bg-card grid place-items-center">
           <img
             src={urlForImage(project.icon).url()}
-            width="80px"
-            height="80px"
             alt={project.title}
+            class="w-20 h-20"
           />
           <h1>{project.title}</h1>
           <a href={`/project/${project.slug}`} >
