resume and about pages added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,9 @@ import { GrGraphQl } from "react-icons/gr/index.js";
       Self taught full stack developer having proficiency in JavaScript and
       Python (their frameworks and ecosystems ).
     </h4>
-
-    <Button className="mt-6">Know more about me</Button>
+    <a href="/about">
+      <Button className="mt-6">Know more about me</Button>
+    </a>
   </section>
 
   <section class="border flex flex-wrap justify-between items-center md:px-6 rounded-md min-h-96 max-h-full">
@@ -76,9 +77,9 @@ import { GrGraphQl } from "react-icons/gr/index.js";
       <h3 class="font-semibold text-xl uppercase ">My</h3>
       <h1 class="text-7xl md:text-[7rem] font-roboto tracking-tight ">Works</h1>
 
-      <h4 class="text-sm md:text-md text-muted-foreground mt-6">Well, my primary focus on javascript and python ecosystem.</h4>
+      <h4 class="text-sm md:text-md text-muted-foreground mt-6">Here's the list of mine works</h4>
     <a href="/works">
-    <Button className="mt-6">Here's my Works</Button>
+    <Button className="mt-6">View my all Works</Button>
     </a>
   </section>
 </Layout>
