--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -10,7 +10,7 @@ const projects: cardInterface[] = await useSanityClient().fetch(
 );
 ---
 
-<Layout title="All Works">
+<Layout title="All Works | Aman Deep">
   <h1 class="text-4xl sm:text-5xl md:text-6xl text-center text-card-foreground font-bold mb-10 mx-1">All Works</h1>
 
   <section class="grid grid-cols-1 sm:grid-cols-2 space-y-3 md:grid-cols-4 place-items-center mt-6">
