--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,42 +6,55 @@ import "@/styles/global.css";
 import { FiGithub, FiTwitter } from "react-icons/fi/index.js";
 import { RiDiscordLine } from "react-icons/ri/index.js";
 import { CiLinkedin } from "react-icons/ci/index.js";
-import {ThemeSwitcher} from '@/components/utils/ThemeSwitcher'
+import { ThemeSwitcher } from "@/components/utils/ThemeSwitcher";
 import { Button } from "@/components/ui/button";
-
+import "@fontsource-variable/roboto-mono";
 const { title } = Astro.props;
 ---
 
-<html lang="en" class="light">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Roboto+Mono:wght@500;600;700&display=swap"
-      rel="stylesheet"
-    />
+      <link rel="sitemap" href="/sitemap-index.xml" />
     <title>{title}</title>
   </head>
+  <script is:inline>
+    (function () {
+      const currentTheme = localStorage.getItem("theme") || "light";
+
+      document.documentElement.className = currentTheme;
+    })();
+  </script>
   <body class="font-roboto">
     <nav
       class="p-2 md:p-4 border fixed top-0 left-0 right-0 backdrop-blur-md z-20 rounded-full mx-2 sm:mx-10 md:mx-20 my-4 flex items-center justify-between"
     >
-      <a href="/" class="font-extrabold text-2xl md:text-3xl p-3 cursor-pointer">A.</a>
-      <div class="flex justify-around items-center text-sm md:text-md w-72 lg:w-96">
+      <a href="/" class="font-extrabold text-2xl md:text-3xl p-3 cursor-pointer"
+        >A.</a
+      >
+      <div
+        class="flex justify-around items-center text-sm md:text-md w-72 lg:w-96"
+      >
         <a href="/">Home</a>
         <a href="/works">Works</a>
         <a href="/resume">Resume</a>
         <a href="/about">About</a>
       </div>
       <div class="flex items-center gap-1">
-
-        <ThemeSwitcher client:load/>
-        <Button className="rounded-full hidden md:block">Connect With me</Button>
+        <ThemeSwitcher client:only="react" />
+        <a href="https://www.linkedin.com/in/aman-deep-5464b425a/" target="_blank">
+          <Button className="rounded-full hidden md:block">
+            Connect With me
+          </Button>
+        </a>
       </div>
     </nav>
-    <main class="mx-2 sm:mx-10 md:mx-20 py-32 flex flex-col justify-center space-y-4">
+    <main
+      class="mx-2 sm:mx-10 md:mx-20 py-32 flex flex-col justify-center space-y-4"
+    >
       <slot />
     </main>
 
@@ -68,9 +81,15 @@ const { title } = Astro.props;
       </div>
 
       <div class="flex justify-center sm:gap-4 gap-8">
-        <h2 class="text-muted-foreground text-xs text-center sm:text-sm">@2023 elamandeep</h2>
-        <h2 class="text-muted-foreground text-xs text-center sm:text-sm">built by elamandeep</h2>
-        <h2 class="text-muted-foreground text-xs text-center sm:text-sm">built with Astro</h2>
+        <h2 class="text-muted-foreground text-xs text-center sm:text-sm">
+          @2023 elamandeep
+        </h2>
+        <h2 class="text-muted-foreground text-xs text-center sm:text-sm">
+          built by elamandeep
+        </h2>
+        <h2 class="text-muted-foreground text-xs text-center sm:text-sm">
+          built with Astro
+        </h2>
       </div>
     </footer>
   </body>
