--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import { GrGraphQl } from "react-icons/gr/index.js";
     </h1>
     <h4 class="text-sm md:text-md text-muted-foreground mt-4">
       Self taught full stack developer having proficiency in JavaScript and
-      Python (their frameworks and ecosystems ).
+      Python (their frameworks and ecosystems).
     </h4>
     <a href="/about">
       <Button className="mt-6">Know more about me</Button>
@@ -34,7 +34,7 @@ import { GrGraphQl } from "react-icons/gr/index.js";
       <h3 class="font-semibold text-xl uppercase md:mb-5">My</h3>
       <h1 class=" text-7xl md:text-[7rem] font-roboto tracking-tight md:-my-4">Tech</h1>
       <h1 class="text-7xl md:text-[7rem] font-roboto tracking-tight">Stack</h1>
-      <h4 class="text-sm md:text-md text-muted-foreground mb-2">Well, my primary focus on javascript and python ecosystem.</h4>
+      <h4 class="text-sm md:text-md text-muted-foreground mb-2">My primary focus on javascript and python ecosystem.</h4>
     </div>
 
     <Separator orientation="vertical" className="min-h-96 h-96 hidden md:block" />
@@ -77,7 +77,7 @@ import { GrGraphQl } from "react-icons/gr/index.js";
       <h3 class="font-semibold text-xl uppercase ">My</h3>
       <h1 class="text-7xl md:text-[7rem] font-roboto tracking-tight ">Works</h1>
 
-      <h4 class="text-sm md:text-md text-muted-foreground mt-6">Here's the list of mine works</h4>
+      <h4 class="text-sm md:text-md text-muted-foreground mt-6">Here's is list of my works</h4>
     <a href="/works">
     <Button className="mt-6">View my all Works</Button>
     </a>
