--- a/src/pages/project/[slug].astro
+++ b/src/pages/project/[slug].astro
@@ -58,7 +58,7 @@ const { slug } = Astro.params;
 
 		<div class="flex flex-col md:flex-row justify-start items-start md:items-center  gap-5">
 			<a
-				class="text-muted-foreground flex justify-center items-center gap-2"
+				class="text-muted-foreground text-sm md:text-md flex justify-center items-center gap-2"
 				href={liveLink}
 				target="_blank"
 			>
@@ -66,7 +66,7 @@ const { slug } = Astro.params;
 			>
 			<a
 				href={githubLink}
-				class="text-muted-foreground flex justify-center items-center gap-2"
+				class="text-muted-foreground text-sm md:text-md flex justify-center items-center gap-2"
 				target="_blank"
 			>
 				<FiGithub size="20px" />{githubLink ?? "Na"}
