linkedin url changed

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,7 +45,7 @@ const { title } = Astro.props;
       </div>
       <div class="flex items-center gap-1">
         <ThemeSwitcher client:only="react" />
-        <a href="https://www.linkedin.com/in/aman-deep-5464b425a/" target="_blank">
+        <a href="https://www.linkedin.com/in/elamandeep/" target="_blank">
           <Button className="rounded-full hidden md:block">
             Connect With me
           </Button>
@@ -69,7 +69,7 @@ const { title } = Astro.props;
           ><RiDiscordLine size={30} className="text-muted-foreground" /></a
         >
         <a
-          href="https://www.linkedin.com/in/aman-deep-5464b425a/"
+          href="https://www.linkedin.com/in/elamandeep/"
           target="_blank"
           ><CiLinkedin size={30} className="text-muted-foreground" /></a
         >
