--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -23,7 +23,7 @@ import { Button } from "@/components/ui/button";
         <a href="mailto:deep.aman6174@gmail.com" target="_blank"
         ><Button variant="outline" className="w-full rounded-full">Email</Button></a
         >
-        <a href="https://www.linkedin.com/in/aman-deep-5464b425a/" target="_blank"
+        <a href="https://www.linkedin.com/in/elamandeep/" target="_blank"
         ><Button variant="outline" className="w-full rounded-full">Linkedin</Button></a
         >
         <a href="https://twitter.com/elamandeep?t=evwZYu6t5FJOnh6mRebXRQ&s=09" target="_blank"
