--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="Aman Deep">
-  <section class="flex justify-center items-center h-80 p-3">
+  <section class="flex justify-center items-center md:h-80 p-3 ">
     <p class="font-normal text-sm md:text-md">
 
       Hi there! I'm Aman Deep, a passionate full-stack developer from India. I'm currently pursuing my BCA (Bachelor of Computer Application) degree.
