Image issue fixed

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -10,7 +10,7 @@ import { Button } from "@/components/ui/button";
   >
     <div class="p-6">
       <div class="w-full flex flex-col items-center">
-        <img src="./profile.jpg" class="w-44 h-44 rounded-full border p-1" alt="Aman Deep" />
+        <img src="/profile.jpg" class="w-44 h-44 rounded-full border p-1" alt="Aman Deep" />
         <h1 class="">Aman Deep</h1>
         <h3 class="text-muted-foreground text-center">Self taught Fullstack Developer</h4>
         <h4 class="text-muted-foreground">2nd year BCA Student</h4>
