--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,18 +3,25 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="Aman Deep">
-  <section class="flex justify-center items-center md:h-80 p-3 ">
+  <section class="flex justify-center items-center md:h-80 p-3">
     <p class="font-normal text-sm md:text-md">
-
-      Hi there! I'm Aman Deep, a passionate full-stack developer from India. I'm currently pursuing my BCA (Bachelor of Computer Application) degree.
-       <br/><br/>
-      My journey as a developer has been an exciting one, constantly learning and exploring new technologies and frameworks. I believe that every line of code has the potential to create innovative solutions and positively impact people's lives.
-      My portfolio is a reflection of my diverse projects and achievements, showcasing my dedication to crafting elegant and efficient solutions. I'm always up for challenges and passionate about transforming ideas into reality.
-      <br/><br/>
-      I'm on a quest to grow as a developer and make a difference in the tech world. Let's connect, collaborate, and embark on this amazing coding journey together!
-      <br/><br/>
-      You can reach me through <a class="underline" href="mailto:deep.aman6174@gmail.com">deep.aman6174@gmail.com</a>. Let's create something incredible!
-      
+      Hi there! I'm Aman Deep, a passionate full-stack developer from India. I'm
+      currently pursuing my BCA (Bachelor of Computer Application) degree.
+      <br /><br />
+      My journey as a developer has been an exciting one, constantly learning and
+      exploring new technologies and frameworks. I believe that every line of code
+      has the potential to create innovative solutions and positively impact people's
+      lives. My portfolio is a reflection of my diverse projects and achievements,
+      showcasing my dedication to crafting elegant and efficient solutions. I'm always
+      up for challenges and passionate about transforming ideas into reality.
+      <br /><br />
+      I'm on a quest to grow as a developer and make a difference in the tech world.
+      Let's connect, collaborate, and embark on this amazing coding journey together!
+      <br /><br />
+      You can reach me through <a
+        class="underline"
+        href="mailto:deep.aman6174@gmail.com">deep.aman6174@gmail.com</a
+      >. Let's create something incredible!
     </p>
   </section>
 </Layout>
