--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,27 +10,41 @@ import { ThemeSwitcher } from "@/components/utils/ThemeSwitcher";
 import { Button } from "@/components/ui/button";
 import "@fontsource-variable/roboto-mono";
 const { title } = Astro.props;
+import { ViewTransitions } from "astro:transitions";
 ---
 
-<html lang="en">
+<html lang="en" transition:animate="none">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/A.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-      <link rel="sitemap" href="/sitemap-index.xml" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <title>{title}</title>
-  </head>
-  <script is:inline>
-    (function () {
-      const currentTheme = localStorage.getItem("theme") || "light";
+    <ViewTransitions />
+    <script is:inline>
+      (function () {
+        const currentTheme = localStorage.getItem("theme") || "light";
+        document.addEventListener(
+          "astro:page-load",
+          () => {
+            document.documentElement.className = currentTheme;
+          },
+          { once: true }
+        );
+        document.documentElement.className = currentTheme;
 
-      document.documentElement.className = currentTheme;
-    })();
-  </script>
+        document.addEventListener("astro:after-swap", () => {
+          document.documentElement.className = currentTheme;
+        });
+      })();
+    </script></head
+  >
+
   <body class="font-roboto">
     <nav
       class="p-2 md:p-4 border fixed top-0 left-0 right-0 backdrop-blur-md z-20 rounded-full mx-2 sm:mx-10 md:mx-20 my-4 flex items-center justify-between"
+      transition:persist
     >
       <a href="/" class="font-extrabold text-2xl md:text-3xl p-3 cursor-pointer"
         >A.</a
@@ -40,7 +54,6 @@ const { title } = Astro.props;
       >
         <a href="/">Home</a>
         <a href="/works">Works</a>
-        <a href="/resume">Resume</a>
         <a href="/about">About</a>
       </div>
       <div class="flex items-center gap-1">
@@ -54,6 +67,7 @@ const { title } = Astro.props;
     </nav>
     <main
       class="mx-2 sm:mx-10 md:mx-20 py-32 flex flex-col justify-center space-y-4"
+      transition:animate="fade"
     >
       <slot />
     </main>
@@ -68,9 +82,7 @@ const { title } = Astro.props;
           target="_blank"
           ><RiDiscordLine size={30} className="text-muted-foreground" /></a
         >
-        <a
-          href="https://www.linkedin.com/in/elamandeep/"
-          target="_blank"
+        <a href="https://www.linkedin.com/in/elamandeep/" target="_blank"
           ><CiLinkedin size={30} className="text-muted-foreground" /></a
         >
         <a
